# internal/models/rest/mailing_statistics.go
@@ -1,0 +1,6 @@
+package rest
+
+type MailingStatistics struct {
+	Mailing  Mailing
+	Messages []Message
+}
