# internal/models/rest/mailings_dashboard.go
@@ -1,0 +1,15 @@
+package rest
+
+type MailingsDashboard struct {
+	Dashboard []MailingCountsByStatus
+}
+
+type MailingCountsByStatus struct {
+	Mailing Mailing
+	Counts  []CountMessagesByStatus
+}
+
+type CountMessagesByStatus struct {
+	Status string
+	Count  uint
+}
