# internal/models/rest/message.go
@@ -3,9 +3,11 @@ package rest
 import "time"
 
 type Message struct {
-	ID          uint
-	CreatedAt   time.Time
-	SendingTime time.Time
-	ClientId    uint
-	MailingId   uint
+	ID                       uint
+	ConnectionTimeMillis     int64
+	ConnectionIdleTimeMillis int64
+	SendingTime              time.Time
+	ClientId                 uint
+	MailingId                uint
+	SendingStatus            string
 }
